# agent-spy

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
patches/: screenshots+0.8.10.patch
src/: app.rs  cli.rs  core.rs  main.rs  message.rs  overlay.rs
src/modes/: bisect.rs  floating.rs  mod.rs  split.rs  tile.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
