[package]
name = "agent-spy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
enigo = "0.6"
iced = { version = "0.14", features = ["image", "tokio"] }
screenshots = "0.8"
x-win = "5.5"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr", "xtest"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
