[package]
name = "agent-spy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33"
enigo = "0.6"
image = "0.25"
imageproc = "0.25"
screenshots = "0.8"
x-win = "5.5"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr", "xtest"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
	"Win32_Foundation",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[package.metadata.patch]
crates = ["screenshots"]

[patch.crates-io]
screenshots = { path = "./target/patch/screenshots-0.8.10" }
